--- a/client/public/index.html
+++ b/client/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ethereum Application, with Wagmi,Material-UI and Rainbowkit</title>
+    <title>Multisignature Wallet, with Wagmi,Material-UI and Rainbowkit</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
